ADD: service apis
